--- a/CultivosCiclicosWeb/src/app/actividades/pages/agregar/agregar.component.html
+++ b/CultivosCiclicosWeb/src/app/actividades/pages/agregar/agregar.component.html
@@ -111,7 +111,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="d-grid gap-2">
-            <button *ngIf="actividad.id" type="submit" class="btn btn-danger">
+            <button *ngIf="actividad.id" type="button" class="btn btn-danger" (click)="borrarActividad()">
               <mat-icon>remove</mat-icon>
               Borrar
             </button>
