--- a/CultivosCiclicosWeb/src/app/actividades/pages/listado/listado.component.html
+++ b/CultivosCiclicosWeb/src/app/actividades/pages/listado/listado.component.html
@@ -103,19 +103,19 @@
         </button>
       </ng-template>
     </ngx-datatable-column>
-    <ngx-datatable-column [flexGrow]="0.5" name="nombre">
+    <ngx-datatable-column [flexGrow]="0.5" name="Nombre de la actividad" prop="nombre">
     </ngx-datatable-column>
-    <ngx-datatable-column [flexGrow]="0.5" name="descripcion">
+    <ngx-datatable-column [flexGrow]="0.5" name="Descripción" prop="descripcion">
     </ngx-datatable-column>
-    <ngx-datatable-column [flexGrow]="0.5" name="observaciones">
+    <ngx-datatable-column [flexGrow]="0.5" name="Observaciones" prop="observaciones">
     </ngx-datatable-column>
-    <ngx-datatable-column [flexGrow]="0.5" name="tipoActividad">
+    <ngx-datatable-column [flexGrow]="0.5" name="Tipo de actividad" prop="tipoActividad">
     </ngx-datatable-column>
-    <ngx-datatable-column [flexGrow]="0.5" name="estado">
+    <ngx-datatable-column [flexGrow]="0.5" name="Estado de la actividad" prop="estado">
     </ngx-datatable-column>
-    <ngx-datatable-column [flexGrow]="0.5" name="fechaActividad">
+    <ngx-datatable-column [flexGrow]="0.5" name="Fecha de la actividad" prop="fechaActividad">
     </ngx-datatable-column>
-    <ngx-datatable-column [flexGrow]="0.5" name="Usuario">
+    <ngx-datatable-column [flexGrow]="0.5" name="Nombre del usuario" prop="usuario">
     </ngx-datatable-column>
   </ngx-datatable>
 </ng-template>
