--- a/CultivosCiclicosWeb/src/app/usuarios/pages/listado/listado.component.html
+++ b/CultivosCiclicosWeb/src/app/usuarios/pages/listado/listado.component.html
@@ -31,15 +31,15 @@
                 </button>
             </ng-template>  
         </ngx-datatable-column>
-        <ngx-datatable-column [flexGrow]="0.5" name="NombreCompleto">
+        <ngx-datatable-column [flexGrow]="0.5" name="Nombre de usuario" prop="nombreCompleto">
         </ngx-datatable-column>
-        <ngx-datatable-column [flexGrow]="0.5" name="Correo">
+        <ngx-datatable-column [flexGrow]="0.5" name="Correo eletrónico" prop="correo">
         </ngx-datatable-column>
         <ngx-datatable-column [flexGrow]="0.5" name="Rol">
         </ngx-datatable-column>
-        <ngx-datatable-column [flexGrow]="0.5" name="TipoDocumento">
+        <ngx-datatable-column [flexGrow]="0.5" name="Tipo de documento" prop="tipoDocumento">
         </ngx-datatable-column>
-        <ngx-datatable-column [flexGrow]="0.5" name="NumeroIdentificacion">
+        <ngx-datatable-column [flexGrow]="0.5" name="Número de identificación" prop="numeroIdentificacion">
         </ngx-datatable-column>
     </ngx-datatable>  
 </ng-template>
