--- a/CultivosCiclicosWeb/src/app/home/pages/home/home.component.html
+++ b/CultivosCiclicosWeb/src/app/home/pages/home/home.component.html
@@ -57,6 +57,21 @@
                     </a>
                 </mat-expansion-panel>
             </mat-accordion>
+            <mat-accordion *ngIf="RegistroSiembraEnabled">
+                <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                        <mat-panel-title>
+                            Registro Siembra
+                        </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <a routerLink="../registro-siembra/listado"
+                        mat-list-item
+                        (click)="sidenav.toggle()"> 
+                        <mat-icon mat-list-icon >label</mat-icon>
+                        <span>Listado de Registro Siembra</span>
+                    </a>
+                </mat-expansion-panel>
+            </mat-accordion>
         </mat-nav-list>
     </mat-sidenav>    
     <mat-toolbar>
@@ -73,7 +88,7 @@
     </mat-toolbar>
     <div class="container">
         <router-outlet>
-            <app-inicio></app-inicio>
         </router-outlet>
     </div>    
 </mat-sidenav-container>
+<app-inicio></app-inicio>
