--- a/CultivosCiclicosWeb/src/app/registro-siembra/pages/listado/listado.component.html
+++ b/CultivosCiclicosWeb/src/app/registro-siembra/pages/listado/listado.component.html
@@ -109,6 +109,8 @@
     <ngx-datatable-column [flexGrow]="0.5" name="Fecha de registro de siembra" prop="fechaRegistroSiembra">
     </ngx-datatable-column>
     <ngx-datatable-column [flexGrow]="0.5" name="Nombre de usuario" prop="usuario">
+    </ngx-datatable-column>    
+    <ngx-datatable-column [flexGrow]="0.5" name="Nombre de actividad" prop="actividad_Nombre">
     </ngx-datatable-column>
   </ngx-datatable>
 </ng-template>
