--- a/CultivosCiclicosWeb/src/app/registro-siembra/pages/listado/listado.component.html
+++ b/CultivosCiclicosWeb/src/app/registro-siembra/pages/listado/listado.component.html
@@ -98,7 +98,7 @@
         <button mat-raised-button color="primary" (click)="EditarRegistro(value)">
           Editar
         </button>
-      </ng-template>
+      </ng-template> 
     </ngx-datatable-column>
     <ngx-datatable-column [flexGrow]="0.5" name="Área de muestra" prop="areaMuestraNombre">
     </ngx-datatable-column>
@@ -107,10 +107,13 @@
     <ngx-datatable-column [flexGrow]="0.5" name="Estado" prop="estadoNombre">
     </ngx-datatable-column>
     <ngx-datatable-column [flexGrow]="0.5" name="Fecha de registro de siembra" prop="fechaRegistroSiembra">
+      <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+        {{ value | date:'medium'}}
+      </ng-template>
     </ngx-datatable-column>
     <ngx-datatable-column [flexGrow]="0.5" name="Nombre de usuario" prop="usuario">
     </ngx-datatable-column>    
     <ngx-datatable-column [flexGrow]="0.5" name="Nombre de actividad" prop="actividad_Nombre">
     </ngx-datatable-column>
-  </ngx-datatable>
+  </ngx-datatable> 
 </ng-template>
