--- a/CultivosCiclicosWeb/src/app/graficas/pages/reporte-calidades-por-variedad/reporte-calidades-por-variedad.component.html
+++ b/CultivosCiclicosWeb/src/app/graficas/pages/reporte-calidades-por-variedad/reporte-calidades-por-variedad.component.html
@@ -1,1 +1,11 @@
-<p>reporte-calidades-por-variedad works!</p>
+<div>
+    <div>
+      <div style="display: block">
+        <canvas baseChart
+          [data]="doughnutChartData"
+  
+          [type]="doughnutChartType">
+        </canvas>
+      </div>
+    </div>
+  </div>
