--- a/CultivosCiclicosWeb/src/app/auth/pages/login/login.component.html
+++ b/CultivosCiclicosWeb/src/app/auth/pages/login/login.component.html
@@ -6,11 +6,13 @@
                   autocomplete="off"
                   [formGroup]="miFormularioLogin"
                   (submit)="login()">
-                
-                <span class="login100-form-title p-b-49">
-                    Login
-                </span>
-
+                  
+                  <div class="text-center">
+                    <img src="../../../../assets/images/icons/icon.png" alt="image" />
+                    <span class="login100-form-title p-b-49">
+                        Login
+                    </span>
+                </div>
                 <div class="wrap-input100 m-b-23">
                     <span class="label-input100">Email</span>
                     <input class="input100"
