--- a/CultivosCiclicosWeb/src/app/home/pages/inicio/inicio.component.html
+++ b/CultivosCiclicosWeb/src/app/home/pages/inicio/inicio.component.html
@@ -1,4 +1,10 @@
 
-<p>
-  inicio works!
-</p>
+
+<div class="row">
+  <!-- <div class="col-md-6">
+    <app-reporte-area-demuestra-calidad></app-reporte-area-demuestra-calidad>
+  </div>
+  <div class="col-md-6">
+    <app-reporte-calidades-por-variedad></app-reporte-calidades-por-variedad>
+  </div> -->
+</div>
