--- a/CultivosCiclicosWeb/src/app/clasificacion/pages/listado/listado.component.html
+++ b/CultivosCiclicosWeb/src/app/clasificacion/pages/listado/listado.component.html
@@ -100,9 +100,9 @@
           </button>
         </ng-template> 
       </ngx-datatable-column>
-      <ngx-datatable-column [flexGrow]="0.5" name="Área de muestra" prop="areaMuestra_Nombre">
+      <ngx-datatable-column [flexGrow]="0.5" name="Área de muestra" prop="areaMuestraNombre">
       </ngx-datatable-column>
-      <ngx-datatable-column [flexGrow]="0.5" name="Calidad" prop="calidad_Nombre">
+      <ngx-datatable-column [flexGrow]="0.5" name="Calidad" prop="calidadNombre">
       </ngx-datatable-column>
       <ngx-datatable-column [flexGrow]="0.5" name="Cantidad" prop="cantidad">
       </ngx-datatable-column>
