--- a/CultivosCiclicosWeb/src/app/graficas/pages/reporte-area-demuestra-calidad/reporte-area-demuestra-calidad.component.html
+++ b/CultivosCiclicosWeb/src/app/graficas/pages/reporte-area-demuestra-calidad/reporte-area-demuestra-calidad.component.html
@@ -1,5 +1,10 @@
 
 <div class="row">
+  <div class="col">
+    <h3><b>Reporte área de muestra por calidad</b></h3>
+  </div>
+</div> 
+<div class="row">
     <div class="col">
       <div style="display: block">
         <canvas baseChart
