--- a/CultivosCiclicosWeb/src/app/graficas/pages/reporte-area-demuestra-calidad/reporte-area-demuestra-calidad.component.html
+++ b/CultivosCiclicosWeb/src/app/graficas/pages/reporte-area-demuestra-calidad/reporte-area-demuestra-calidad.component.html
@@ -5,7 +5,7 @@
   </div>
 </div> 
 <div class="row">
-    <div class="col">
+  <div class="col-md-11">
       <div style="display: block">
         <canvas baseChart
           [data]="barChartData"
