--- a/CultivosCiclicosWeb/src/app/graficas/pages/reporte-calidades-por-variedad/reporte-calidades-por-variedad.component.html
+++ b/CultivosCiclicosWeb/src/app/graficas/pages/reporte-calidades-por-variedad/reporte-calidades-por-variedad.component.html
@@ -1,5 +1,12 @@
+
+<div class="row">
+  <div class="col">
+    <h3><b>Reporte de calidades por variedad</b></h3>
+  </div>
+</div> 
 <div>
-    <div>
+  <div class="row">
+    <div class="col-md-6">
       <div style="display: block">
         <canvas baseChart
           [data]="doughnutChartData"
@@ -8,4 +15,5 @@
         </canvas>
       </div>
     </div>
-  </div>
+  </div>  
+</div>
